welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = 
{
	avance()
		
			if (getCouleurSol()==Color.green)
			{
				return true
			} else {
				return false
			}
}
	
          

/* def estDevantLibre():Boolean = {
    if (estFaceMur() == true) {
        return false;
        /* interdit d'écrire du code ici */
  /*  } else {
        return true;
        /* pareil ici */
   /* }
    /* même ici, oubliez */